@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-29T08:19:07Z",
+  "timestamp" : "2022-07-29T16:23:08Z",
   "count_outdated" : 422,
   "uniques_outdated" : 242,
-  "count" : 448,
+  "count" : 447,
   "uniques" : 258,
   "clones" : [
     {
       "timestamp": "2022-07-15T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
